# project2_malygin_artyom_m25-555

./: .gitignore  Makefile  README.md  demo2.cast  demo_commands.cast  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
